# TRPO-prop

./: .gitignore
ex1/: main.cpp
ex2/: CMakeLists.txt  main.cpp
ex2/myname/: solver_base.cpp  solver_base.h  solver_quad.cpp  solver_quad.h
ex2/trpo-core-cpp/: EquationInterface.cpp
ex3/: main.cpp
ex3/core/: EquationInterface.h  logAbstract.h  logInterface.cpp
ex3/myname/: MyLog.h  solver_base.cpp  solver_base.h  solver_quad.cpp  solver_quad.h
ex3/trpo-core-cpp/: logAbstract.cpp
ex4/: CMakeLists.txt  logAbstract.cpp  logInterface.h  main.cpp  solver_quad.cpp  solver_quad.h
ex4/core/: EquationInterface.cpp
ex4/myname/: MyLog.cpp
ex4/trpo-core-cpp/: README.md  logInterface.cpp
