cmake_minimum_required(VERSION 3.16)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 main.cpp solver_base.cpp solver_base.h solver_quad.cpp solver_quad.h EquationInterface.cpp EquationInterface.cpp EquationInterface.h logAbstract.cpp logAbstract.h logInterface.cpp logInterface.h MyLog.cpp MyLog.h MyLog.cpp MyLog.h logInterface.h logAbstract.h logAbstract.cpp logAbstract.h logInterface.cpp logInterface.h)